--- a/content/en/guide/2.user/1.install.md
+++ b/content/en/guide/2.user/1.install.md
@@ -1,25 +1,25 @@
 ---
-title: "Téléchargement et installation"
-description: "Guide pour télécharger et installer l'éditeur ePoc."
+title: "Download and Installation"
+description: "Guide to download and install the ePoc editor."
 icon: "lucide:cloud-download"
 ---
-## Téléchargement
+## Download
 
-Pour télécharger la dernière version de l'éditeur, rendez-vous sur [https://epoc.inria.fr/editor](https://epoc.inria.fr/editor) et cliquez sur la version correspondante à votre OS (Windows, macOS, Linux).
+To download the latest version of the editor, go to [https://epoc.inria.fr/editor](https://epoc.inria.fr/editor) and click on the version corresponding to your OS (Windows, macOS, Linux).
 
 ## Installation
 
 ### Windows
 
-Double-cliquez sur l'exécutable téléchargé précédemment et suivez les instructions. Ensuite, démarrez l'application depuis le menu Démarrer ou le raccourci de bureau.
+Double-click on the downloaded executable and follow the instructions. Then, start the application from the Start menu or desktop shortcut.
 
 ### MacOs
 
-Décompressez l'archive et déplacez l'application dans le dossier `Applications` de l'ordinateur.
+Extract the archive and move the application to the `Applications` folder on your computer.
 
 ### Linux
 
-Accédez au dossier où se trouve le fichier `.deb` puis installez le paquet avec la commande
+Access the folder containing the `.deb` file and install the package with the command
 ```shell
 sudo dpkg -i epoc-editor_vXXXX.deb
 ```
