--- a/content/en/guide/2.user/2.getting-started.md
+++ b/content/en/guide/2.user/2.getting-started.md
@@ -1,33 +1,32 @@
 ---
-title: "Démarrage"
-description: "Guide pour démarrer un nouveau projet avec l'éditeur ePoc."
+title: "Getting Started"
+description: "Guide to start a new project with the ePoc editor."
 icon: "lucide:rocket"
 ---
-## Démarrer un nouveau projet
+## Starting a New Project
 
-Une fois l'éditeur ePoc lancé, démarrer la création d'une formation, en cliquant sur le bouton de droite "Créer un nouveau projet" :
+Once the ePoc editor is launched, start creating a training by clicking on the "Create a new project" button on the right:
 
-![Commencer un nouveau projet](./images/create-new.png)
+![Start a new project](./images/create-new.png)
 
-## Interface éditeur
-Par défaut, vous accédez à une interface de départ qui se compose de différents éléments. Voici une description de ces éléments :
+## Editor Interface
+By default, you access a starting interface composed of different elements. Here's a description of these elements:
 
-![Interface éditeur](./images/layout.png)
+![Editor interface](./images/layout.png)
 
 ::steps
-### Barre d’outils latérale
-Permet d'ajouter les contenus à votre scénario en glisser/déposer
-:read-more{to="/guide/user/content/text" title="Contenu"}
+### Side Toolbar
+Allows you to add content to your scenario using drag and drop
+:read-more{to="/guide/user/content/text" title="Content"}
 
-### Zone d'édition
-La partie centrale utilisée pour la construction du scénario pédagogique.
+### Editing Area
+The central part used for building the educational scenario.
 
-### Barre de status
-La partie située en haut à gauche qui donne des informations sur l'ePoc en cours d'édition
+### Status Bar
+The section located at the top left that provides information about the ePoc being edited.
 
-### Barre d'accès rapide
-La partie située en haut à droite qui permet d'accéder rapidement à certaines fonctionnalités de l'éditeur, telles que :
-
+### Quick Access Bar
+The section located at the top right that provides quick access to certain editor features, such as:
 
 ::card
 ---
@@ -35,83 +34,82 @@ title: Zoom
 icon: lucide:zoom-in
 horizontal: true
 ---
-Zoomer sur le scénario pédagogique afin de mieux visualiser les différentes branches et sous-branches de la formation. Très utile lorsque vous travaillez sur des formations complexes avec plusieurs embranchements. Vous pouvez aussi zoomer en utilisant la molette de votre souris.
+Zoom in on the educational scenario to better visualize the different branches and sub-branches of the training. Very useful when working on complex trainings with multiple branches. You can also zoom using your mouse wheel.
 ::
 
 ::card
 ---
-title: Retour en arrière
+title: Undo
 icon: lucide:undo-2
 horizontal: true
 ---
-Annuler la dernière action effectuée dans l'éditeur. Vous pouvez cliquer sur cette fonctionnalité plusieurs fois de suite.
+Undo the last action performed in the editor. You can click this feature multiple times in succession.
 ::
 
 ::card
 ---
-title: Revenir en avant
+title: Redo
 icon: lucide:redo-2
 horizontal: true
 ---
-Rétablir la dernière action annulée dans l'éditeur. Vous pouvez cliquer sur cette fonctionnalité plusieurs fois aussi.
+Restore the last undone action in the editor. You can click this feature multiple times as well.
 ::
 
 ::card
 ---
-title: Sauvegarder
+title: Save
 icon: lucide:save
 horizontal: true
 ---
-Sauvegarder toutes les modifications que vous avez apportées à votre projet. Il est important de sauvegarder régulièrement votre projet pour éviter de perdre des données en cas de panne d'ordinateur ou de coupure de courant.
+Save all modifications you've made to your project. It's important to save your project regularly to avoid losing data in case of computer failure or power outage.
 ::
 
 ::card
 ---
-title: Aperçu
+title: Preview
 icon: lucide:play
 horizontal: true
 ---
-Prévisualiser votre formation telle qu'elle apparaitra pour les apprenants, sur mobile. Vous pouvez utiliser cette fonctionnalité pour vous assurer que votre formation est bien structurée et que tous les éléments interactifs fonctionnent correctement.
+Preview your training as it will appear for learners on mobile. You can use this feature to ensure your training is well-structured and that all interactive elements work correctly.
 ::
 
 ::card
 ---
-title: Exporter archive
+title: Export Archive
 icon: lucide:file-archive
 horizontal: true
 ---
-Exporter votre formation sous forme d'une archive qui peut être téléchargée et partagée avec d'autres utilisateurs. Cette archive contient toutes les données et les fichiers nécessaires pour être lue sur l'application mobile ePoc, y compris les images, les vidéos, les quiz, etc.
-
+Export your training as an archive that can be downloaded and shared with other users. This archive contains all the data and files needed to be read on the ePoc mobile application, including images, videos, quizzes, etc.
 
 #footer
-:read-more{to="/guide/app/import" title="Importer un ePoc"}
+:read-more{to="/guide/app/import" title="Import an ePoc"}
 ::
 ::
 
-## Terminologie
+## Terminology
 
-Dans ce guide nous ferons la distinction des termes suivants :
+In this guide, we will distinguish between the following terms:
 
-- **Page** : un élément qui compose un chapitre. Une page contient un titre et un ou plusieurs contenus disposés verticalement.
-  On peut passer d'une page à l'autre en swipant de droite à gauche
-- **Contenu** : un élément qui compose une page. Un contenu peut être du texte, des images, des tableaux, des graphiques et d'autres éléments de contenu.
+- **Page**: an element that makes up a chapter. A page contains a title and one or more contents arranged vertically.
+  You can move from one page to another by swiping from right to left.
+- **Content**: an element that makes up a page. Content can be text, images, tables, graphs, and other content elements.
 
-## Mon premier ePoc
+## My First ePoc
 
-Le parcours de l'ePoc "Produire mon 1er ePoc" vous guide pas à pas pour la découverte d'ePoc Editor, l'application de bureau pour construire votre ePoc.
-En suivant les étapes de l'ePoc "Produire mon 1er ePoc" sur votre mobile, vous pouvez en parallèle, avec ePoc Editor sur votre ordinateur, découvrir son interface, expérimenter la création de contenus, le paramétrage d'évaluation puis l'export de votre premier ePoc au format .epoc, prêt à être téléchargé et suivi sur l'application mobile.
+The "Produce My First ePoc" ePoc journey guides you step by step through the discovery of ePoc Editor, the desktop application for building your ePoc.
+By following the steps of the "Produce My First ePoc" ePoc on your mobile, you can simultaneously, with ePoc Editor on your computer, discover its interface, experiment with content creation, assessment configuration, and then export your first ePoc in .epoc format, ready to be downloaded and followed on the mobile application.
 
 ### Synopsis
 
-Conçue comme un accompagnement structuré et ludique, l'apprenant est guidé pas à pas pour découvrir l'éditeur d'ePoc et expérimenter comment :
+Designed as a structured and engaging accompaniment, the learner is guided step by step to discover the ePoc editor and experiment with how to:
 
-- Structurer votre parcours pédagogique
-- Créer des contenus variés
-- Paramétrer une évaluation
-- Exporter votre ePoc pour lecture sur l'application mobile
+- Structure your educational path
+- Create varied content
+- Configure an assessment
+- Export your ePoc for reading on the mobile application
 
-### Informations pratiques
+### Practical Information
 
-- Télécharger [ePoc Editor](/editor/) sur votre ordinateur (MacOS, Windows, Linux),
-- Suivre les modules de l'ePoc "[Produire mon 1er ePoc](/en/epocs/e012mc)" sur votre téléphone mobile tout en expérimentant les fonctionnalités présentées.
-- Durée de l'apprentissage : 40 min (10 min par module)
+- Download [ePoc Editor](/editor/) on your computer (MacOS, Windows, Linux),
+- Follow the modules of the ePoc "[Produce My First ePoc](/en/epocs/e012mc)" on your mobile phone while experimenting with the presented features.
+- Learning duration: 40 min (10 min per module)
