--- a/content/en/guide/2.user/3.epoc.md
+++ b/content/en/guide/2.user/3.epoc.md
@@ -1,65 +1,65 @@
 ---
-title: Paramètres ePoc
-description: "Guide pour configurer les paramètres d'un nouvel ePoc."
+title: ePoc Settings
+description: "Guide to configure settings for a new ePoc."
 icon: "lucide:book-text"
 ---
 
-Créer un ePoc nécessite de renseigner quelques paramètres dans un formulaire (situé dans la partie droite de l’écran) afin de personnaliser certains aspects de la formation. Pour accéder à la fenêtre “À propos de l’ePoc”, il faut cliquer sur l’icône ePoc (située en haut à gauche) de la partie centrale. Vous remarquerez que lorsque l’icône est sélectionnée, ses contours deviennent bleus.
+Creating an ePoc requires filling out a few parameters in a form (located on the right side of the screen) to customize certain aspects of the training. To access the "About the ePoc" window, click on the ePoc icon (located at the top left) in the central part. You'll notice that when the icon is selected, its outline turns blue.
 
-![Edition du noeud ePoc](./images/epoc.png)
+![Editing the ePoc node](./images/epoc.png)
 
-Dans le formulaire (la partie droite de l’écran) les paramètres sont classés dans différentes rubriques :
+In the form (the right side of the screen), the parameters are classified into different sections:
 
-## Métadonnées
+## Metadata
 
 ::stack{class="p-4"}
     ::field-group
-        ::field{name="Edition" type="texte"}
-        L'année de sortie de l'ePoc ou le nom de la version
+        ::field{name="Edition" type="text"}
+        The year of release of the ePoc or the version name
         ::
 
-        ::field{name="Image de couverture" type="image"}
-        L’image utilisée pour représenter la formation ePoc. Elle est souvent la première image que les utilisateurs voient et doit être “accrocheuse” pour susciter de l'intérêt.
+        ::field{name="Cover Image" type="image"}
+        The image used to represent the ePoc training. It's often the first image users see and should be "eye-catching" to generate interest.
         ::
 
-        ::field{name="Teaser vidéo" type="vidéo"}
-        La courte vidéo qui donne un aperçu du contenu de la ressource ePoc. Elle peut contenir des interviews, des graphiques, des animations etc, pour attirer l'attention des utilisateurs et leur donner un avant-goût de ce qu'ils peuvent attendre de la ressource.
+        ::field{name="Teaser Video" type="video"}
+        The short video that gives an overview of the ePoc resource content. It can contain interviews, graphics, animations, etc., to attract users' attention and give them a preview of what they can expect from the resource.
         ::
 
-        ::field{name="Vignette de la vidéo" type="image"}
-        L’image miniature souvent utilisée pour donner un aperçu de ce que la vidéo contient et pour inciter les utilisateurs à cliquer sur la vidéo pour la regarder.
+        ::field{name="Video Thumbnail" type="image"}
+        The thumbnail image often used to give a preview of what the video contains and to encourage users to click on the video to watch it.
         ::
 
-        ::field{name="Présentation" type="texte"}
-        La description détaillée de la ressource elle-même, de son contenu, des thématiques abordées.
+        ::field{name="Presentation" type="text"}
+        The detailed description of the resource itself, its content, and the themes covered.
         ::
 
-        ::field{name="Label des chapitres" type="texte"}
-        Un court titre utilisé pour identifier chaque section de la ressource ePoc. Il est possible de modifier le nom “chapitre” en utilisant la barre de complétion. (exemples : scénario, module, etc)
+        ::field{name="Chapter Label" type="text"}
+        A short title used to identify each section of the ePoc resource. It's possible to modify the name "chapter" using the completion bar. (examples: scenario, module, etc)
         ::
 
-        ::field{name="Objectifs" type="Liste<Texte>"}
-        Permettent de décrire ce que les utilisateurs peuvent attendre de la formation en suivant la formation sur mobile. Les objectifs peuvent être spécifiques ou généraux et peuvent être liés à des compétences, des connaissances ou des aptitudes particulières.
+        ::field{name="Objectives" type="List<Text>"}
+        Allow describing what users can expect from the training by following it on mobile. Objectives can be specific or general and can be related to particular skills, knowledge, or abilities.
         ::
 
     ::
 ::
 
-## Auteurs
+## Authors
 
 ::stack{class="p-4"}
     ::field-group
-        ::field{name="Nom" type="texte"}
-        Le nom et prénom de l'auteur
+        ::field{name="Name" type="text"}
+        The author's first and last name
         ::
         ::field{name="Photo" type="image"}
-        Une éventuelle photo ou un avatar de l’auteur
+        An optional photo or avatar of the author
         ::
-        ::field{name="Titre" type="texte"}
-        Son identité professionnelle (enseignant, formateur, ingénieur pédagogique, spécialistes du contenu ou d'autres professionnels de l'éducation).
+        ::field{name="Title" type="text"}
+        Their professional identity (teacher, trainer, educational engineer, content specialist, or other education professionals).
         ::
-        ::field{name="Description" type="texte"}
-        Préciser quel a été son rôle au cours de la création de l’ePoc (exemple : conception et scénarisation de la formation)
+        ::field{name="Description" type="text"}
+        Specify their role during the creation of the ePoc (example: design and scripting of the training)
         ::
     ::
 ::
