--- a/content/en/guide/2.user/4.chapter.md
+++ b/content/en/guide/2.user/4.chapter.md
@@ -1,10 +1,10 @@
 ---
-title: "Chapitre"
-description: "Guide pour créer et configurer un chapitre dans l'éditeur ePoc."
+title: "Chapter"
+description: "Guide to create and configure a chapter in the ePoc editor."
 icon: "lucide:bookmark"
 ---
-L'interface d'une formation sur mobile est très modulable, vous la configurez en ajoutant autant de chapitres que de besoin. Pour créer un chapitre, cliquer sur le bouton **+**
+The interface of a mobile training is highly customizable, you configure it by adding as many chapters as needed. To create a chapter, click on the **+** button.
 
-![Ajouter un chapitre](/images/chapter.png)
+![Add a chapter](/images/chapter.png)
 
-Vous pouvez alors donner un titre à ce chapitre 1 et lui attribuer des objectifs. Pour créer le chapitre 2, suivez la même démarche en cliquant de nouveau sur le bouton **+**
+You can then give a title to this chapter 1 and assign objectives to it. To create chapter 2, follow the same process by clicking again on the **+** button.
