--- a/content/en/guide/2.user/5.content/1.text.md
+++ b/content/en/guide/2.user/5.content/1.text.md
@@ -1,11 +1,9 @@
 ---
-title: "Contenu texte"
-description: "Guide pour intégrer un contenu texte à votre parcours de formation."
+title: "Text Content"
+description: "Guide to integrate text content into your training path."
 icon: "lucide:text"
 ---
 
-Pour intégrer un contenu texte à votre parcours de formation, il faut effectuer un glisser-déposer en partant de l’icône
-texte dans la barre d'outils latérale et le déposer dans la zone d'édition.
+To integrate text content into your training path, you need to drag and drop from the text icon in the side toolbar to the editing area.
 
-
-![Renseigner un contenu texte](/images/text.png)
+![Fill in text content](/images/text.png)
