--- a/content/en/guide/2.user/5.content/2.wysiwyg/1.latex.md
+++ b/content/en/guide/2.user/5.content/2.wysiwyg/1.latex.md
@@ -1,41 +1,41 @@
 ---
-title: "LaTex"
-description: "Guide pour intégrer du contenu LaTex à votre parcours de formation."
+title: "LaTeX"
+description: "Guide to integrate LaTeX content into your training path."
 icon: "lucide:sigma"
 ---
-Dans l'éditeur WYSIWYG, vous pouvez rédiger du code LaTex. Pour l'instant l'aperçu du LaTex n'est pas disponible dans l'éditeur, mais vous pouvez visualiser le résultat sur l'application mobile. Pour obtenir un aperçu de votre cours tout en rédigeant vos expressions LaTex, vous pouvez lancer l'aperçu en simultané avec l'éditeur.
+In the WYSIWYG editor, you can write LaTeX code. Currently, LaTeX preview is not available in the editor, but you can view the result in the mobile application. To get a preview of your course while writing your LaTeX expressions, you can launch the preview simultaneously with the editor.
 
-![Démo Katex](/images/katex-demo.jpg)
+![KaTeX Demo](/images/katex-demo.jpg)
 
 ::alert{to="https://katex.org/#demo" target="_blank" icon="lucide:link"}
-Bac à sable KaTeX
+KaTeX Sandbox
 ::
-<!-- Vous pouvez également utiliser ce [bac à sable](https://katex.org/#demo) -->
+<!-- You can also use this [sandbox](https://katex.org/#demo) -->
 
-## Délimiteur
-Pour rédiger vos expressions, vous devez utiliser des délimiteurs au début et à la fin de votre expression. Voici les délimiteurs à utiliser :
+## Delimiters
+To write your expressions, you need to use delimiters at the beginning and end of your expression. Here are the delimiters to use:
 
-- `$$` Pour commencer une expression en mode "display"
-- `$` Pour commencer une expression en mode "inline"
+- `$$` To start an expression in "display" mode
+- `$` To start an expression in "inline" mode
 
-En résumé, le mode "display" rend les symboles plus grands, adaptés à une ligne distincte, tandis que le mode "inline" les rend plus petits, intégrés dans le texte. En mode "display", les équations sont centrées et n'ont pas de saut de ligne automatique, sauf si spécifié. En mode "inline", les sauts de ligne sont permis après certains symboles ou opérateurs.
+In summary, "display" mode makes symbols larger, suitable for a distinct line, while "inline" mode makes them smaller, integrated into the text. In "display" mode, equations are centered and don't have automatic line breaks unless specified. In "inline" mode, line breaks are allowed after certain symbols or operators.
 
-## Exemples
+## Examples
 
 ::tabs
-    ::div{label="Mode Display"}
+    ::div{label="Display Mode"}
     ```latex
     $$ \sum_{p = 0}^{2n + 1} (-1)^p $$
     ```
 
-    ![Katex en mode display](/images/katex-display.png)
+    ![KaTeX in display mode](/images/katex-display.png)
     ::
 
-    ::div{label="Mode Inline"}
+    ::div{label="Inline Mode"}
     ```latex
     $ \sum_{p = 0}^{2n + 1} (-1)^p $
     ```
 
-    ![Katex en mode inline](/images/katex-inline.png)
+    ![KaTeX in inline mode](/images/katex-inline.png)
     ::
 ::
