--- a/content/en/guide/2.user/5.content/3.video.md
+++ b/content/en/guide/2.user/5.content/3.video.md
@@ -1,76 +1,74 @@
 ---
-title: "Contenu Vidéo"
-description: "Guide pour intégrer un contenu vidéo à votre parcours de formation."
+title: "Video Content"
+description: "Guide to integrate video content into your training path."
 icon: "lucide:circle-play"
 ---
 
-Pour intégrer un contenu vidéo à votre parcours de formation, il faut effectuer un glisser-déposer en partant de l’icône
-vidéo dans la barre d'outils latérale et le déposer dans la zone d'édition.
+To integrate video content into your training path, you need to drag and drop from the video icon in the side toolbar to the editing area.
 
-Séquences vidéo enregistrées qui peuvent inclure des images, du son et des animations. Ce contenu peut être utilisé pour fournir des démonstrations, des présentations, des interviews ou des explications sur un sujet spécifique.
+Recorded video sequences that can include images, sound, and animations. This content can be used to provide demonstrations, presentations, interviews, or explanations on a specific topic.
 
-## Informations à renseigner
+## Information to Fill In
 ::stack
     ::field-group{class="p-4"}
-        ::field{name="Ajouter une vidéo"}
-        Importer la vidéo dans l'éditeur ePoc en utilisant le bouton "Ajouter une vidéo".
+        ::field{name="Add a Video"}
+        Import the video into the ePoc editor using the "Add a Video" button.
         ::
 
-        ::field{name="Résumé"}
-        Brève description de la vidéo pour aider les utilisateurs à comprendre son contenu.
+        ::field{name="Summary"}
+        Brief description of the video to help users understand its content.
         ::
 
-        ::field{name="Transcription"}
-        Si la vidéo contient un discours ou un dialogue important, vous pouvez fournir une transcription textuelle de la vidéo pour aider les utilisateurs qui ne souhaitent pas ou qui ne sont pas en capacité d'écouter la vidéo avec du son.
+        ::field{name="Transcript"}
+        If the video contains important speech or dialogue, you can provide a text transcript of the video to help users who do not wish to or are unable to listen to the video with sound.
         ::
 
-        ::field{name="Vignette"}
-        Image miniature pour la vidéo pour aider les utilisateurs à identifier la vidéo et à la sélectionner facilement.
+        ::field{name="Thumbnail"}
+        Thumbnail image for the video to help users identify the video and select it easily.
         ::
 
-        ::field{name="Sous-titres"}
-        Si la vidéo contient des dialogues ou des discours importants, vous devez fournir des sous-titres pour aider les utilisateurs qui ont des problèmes d'audition ou qui regardent la vidéo dans un environnement bruyant où le son peut être difficile à entendre.
+        ::field{name="Subtitles"}
+        If the video contains important dialogues or speeches, you must provide subtitles to help users who have hearing problems or who are watching the video in a noisy environment where sound may be difficult to hear.
         ::
     ::
 ::
 
-## Encodage des videos
+## Video Encoding
 
-Pour garantir une lecture optimale des vidéos sur la plupart des smartphones, nous recommandons l'encodage en format MP4 avec le codec H.264 en résolution 480p. Ce format est suffisant pour une lecture fluide et de bonne qualité sur les appareils mobiles.
+To ensure optimal video playback on most smartphones, we recommend encoding in MP4 format with H.264 codec at 480p resolution. This format is sufficient for smooth and good quality playback on mobile devices.
 
-### Encodage avec ffmpeg
+### Encoding with ffmpeg
 
-Pour encoder une ou plusieurs vidéos avec [ffmpeg](https://www.ffmpeg.org/), utilisez les commandes suivantes :
+To encode one or more videos with [ffmpeg](https://www.ffmpeg.org/), use the following commands:
 
 ::alert{to="https://www.ffmpeg.org/download.html" target="_blank" icon="lucide:link"}
-Télécharger FFmpeg
+Download FFmpeg
 ::
 
 ```sh
-# Encodage d'une vidéo ou "video.mp4" est la vidéo d'origine et "video-min.mp4" est la vidéo compressée
+# Encoding a video where "video.mp4" is the original video and "video-min.mp4" is the compressed video
 ffmpeg -i video.mp4 -s hd480 -c:v libx264 -crf 23 -c:a aac -strict -2 "video-min.mp4"
 
-# Encodage de toutes les videos d'un dossier
+# Encoding all videos in a folder
 for file in $(find . -name "*.mp4" | sort -z); do
     ffmpeg -i "${file}" -s hd480 -c:v libx264 -crf 23 -c:a aac -strict -2 "${file%.*}-min.mp4"
 done
 ```
 
-### Encodage avec Handbrake
+### Encoding with Handbrake
 
-Si vous préférez utiliser un logiciel graphique nous vous recommandons [HandBrake](https://handbrake.fr). Pour ce faire, suivez ces étapes :
+If you prefer using a graphical software, we recommend [HandBrake](https://handbrake.fr). To do this, follow these steps:
 
 ::alert{to="https://handbrake.fr/downloads.php" target="_blank" icon="lucide:link"}
-Télécharger HandBrake
+Download HandBrake
 ::
-
 
 ::steps{level=5}
-##### Ouvrez HandBrake et chargez votre fichier vidéo
-##### Sélectionnez le préréglage "HQ 480p30"
-##### Assurez-vous que le format de sortie est MP4 et que le codec vidéo est H.264.
-##### Choisissez un emplacement et un nom de sortie pour la vidéo
-##### Cliquez sur "Démarrer" pour commencer l'encodage.
+##### Open HandBrake and load your video file
+##### Select the "HQ 480p30" preset
+##### Make sure the output format is MP4 and the video codec is H.264.
+##### Choose an output location and name for the video
+##### Click "Start" to begin encoding.
 ::
 
-Ces recommandations garantissent une compatibilité maximale et une qualité optimale pour la lecture sur divers appareils.
+These recommendations ensure maximum compatibility and optimal quality for playback on various devices.
