--- a/content/en/guide/2.user/5.content/4.audio.md
+++ b/content/en/guide/2.user/5.content/4.audio.md
@@ -1,53 +1,52 @@
 ---
-title: Contenu Audio
-description: "Guide pour intégrer un contenu audio à votre parcours de formation."
+title: Audio Content
+description: "Guide to integrate audio content into your training path."
 icon: "lucide:volume-2"
 ---
 
-Pour intégrer un contenu audio à votre parcours de formation, il faut effectuer un glisser-déposer en partant de l’icône
-audio dans la barre d'outils latérale et le déposer dans la zone d'édition.
+To integrate audio content into your training path, you need to drag and drop from the audio icon in the side toolbar to the editing area.
 
-Séquences audio enregistrées qui peuvent inclure de la musique, des podcasts ou des effets sonores. Ce contenu peut être utilisé pour fournir des commentaires, des instructions ou des explications sur un sujet spécifique, ou pour permettre aux utilisateurs d'écouter des enregistrements de conférences ou de séminaires par exemple.
+Recorded audio sequences that can include music, podcasts, or sound effects. This content can be used to provide commentary, instructions, or explanations on a specific topic, or to allow users to listen to recordings of conferences or seminars, for example.
 
-Les informations à renseigner pour la rubrique “audio“ sont :
+The information to fill in for the "audio" section is:
 
 ::stack
     ::field-group{class="p-4"}
-        ::field{name="Ajouter un audio" type="mp3"}
-        Importer le fichier audio dans l'éditeur ePoc en utilisant le bouton "Ajouter une audio".
+        ::field{name="Add Audio" type="mp3"}
+        Import the audio file into the ePoc editor using the "Add Audio" button.
         ::
 
-       ::field{name="Résumé" type="text"}
-       Brève description de l'audio pour aider les utilisateurs à comprendre son contenu.
+       ::field{name="Summary" type="text"}
+       Brief description of the audio to help users understand its content.
        ::
 
-       ::field{name="Transcription" type="text"}
-        Si l'audio contient un discours ou un dialogue important, vous pouvez fournir une transcription textuelle de l'audio pour aider les utilisateurs qui ne souhaite pas ou qui ne sont pas en capacité d'écouter l'audio.
+       ::field{name="Transcript" type="text"}
+        If the audio contains important speech or dialogue, you can provide a text transcript of the audio to help users who do not wish to or are unable to listen to the audio.
        ::
     ::
 ::
 
-### Encodage des fichiers audio
+### Audio File Encoding
 
-Pour garantir une lecture optimale des podcasts et autre fichier audio, nous recommandons l'encodage en format MP3 avec un débit binaire de 128 kbps. Ce format est suffisant pour une qualité audio claire et une compatibilité maximale avec divers appareils.
+To ensure optimal playback of podcasts and other audio files, we recommend encoding in MP3 format with a bitrate of 128 kbps. This format is sufficient for clear audio quality and maximum compatibility with various devices.
 
-#### Commande FFmpeg
+#### FFmpeg Command
 
-Pour encoder un podcast avec [FFmpeg](https://ffmpeg.org/), utilisez la commande suivante :
+To encode a podcast with [FFmpeg](https://ffmpeg.org/), use the following command:
 
 ```sh
 ffmpeg -i input.wav -codec\:a libmp3lame -b\:a 128k output.mp3
 ```
 
-### Alternative avec Audacity
+### Alternative with Audacity
 
-Si vous préférez utiliser [Audacity](https://www.audacityteam.org/), suivez ces étapes :
+If you prefer using [Audacity](https://www.audacityteam.org/), follow these steps:
 
 ::steps{level=5}
-##### Ouvrez Audacity et chargez votre fichier audio.
-##### Allez dans "Fichier" > "Exporter" > "Exporter en MP3".
-##### Dans la fenêtre d'exportation, sélectionnez "128 kbps" comme débit binaire.
-##### Cliquez sur "Enregistrer" pour commencer l'encodage.
+##### Open Audacity and load your audio file.
+##### Go to "File" > "Export" > "Export as MP3".
+##### In the export window, select "128 kbps" as the bitrate.
+##### Click "Save" to begin encoding.
 ::
 
-Ces recommandations garantissent une compatibilité maximale et une qualité audio optimale pour la lecture sur divers appareils.
+These recommendations ensure maximum compatibility and optimal audio quality for playback on various devices.
