--- a/content/en/guide/2.user/6.question/1.choice.md
+++ b/content/en/guide/2.user/6.question/1.choice.md
@@ -1,8 +1,8 @@
 ---
-title: "QCM / QCU"
-description: "Guide pour intégrer une question à choix multiple à votre parcours de formation."
+title: "Multiple Choice / Single Choice"
+description: "Guide to integrate a multiple choice question into your training path."
 icon: "lucide:square-check"
 ---
-Question à choix multiple dans laquelle l'utilisateur doit sélectionner la ou les bonnes réponses parmi plusieurs options proposées. Cette question peut être utilisée pour tester la compréhension de l'utilisateur sur un sujet spécifique.
+Multiple choice question where the user must select the correct answer(s) from several options provided. This question can be used to test the user's understanding of a specific topic.
 
-![Renseigner une question à choix multiple](/images/questions/choice.png)
+![Fill in a multiple choice question](/images/questions/choice.png)
