--- a/content/en/guide/2.user/6.question/2.drag-and-drop.md
+++ b/content/en/guide/2.user/6.question/2.drag-and-drop.md
@@ -1,9 +1,9 @@
 ---
-title: Glisser / déposer
-description: "Guide pour intégrer une question à Glisser / déposer à votre parcours de formation."
+title: Drag and Drop
+description: "Guide to integrate a drag and drop question into your training path."
 icon: "lucide:grip"
 ---
 
-Question dans laquelle l'utilisateur doit faire correspondre des éléments d'une liste à des éléments d'une autre liste en les faisant glisser et en les déposant à l'endroit approprié. Cette question peut être utilisée pour tester la capacité de l'utilisateur à associer des éléments en fonction de leurs caractéristiques ou de leur classification.
+Question where the user must match elements from one list to elements from another list by dragging and dropping them to the appropriate location. This question can be used to test the user's ability to associate elements based on their characteristics or classification.
 
-![Renseigner un Glisser / déposer](/images/questions/dragdrop.png)
+![Fill in a drag and drop question](/images/questions/dragdrop.png)
