--- a/content/en/guide/2.user/6.question/3.dropdown.md
+++ b/content/en/guide/2.user/6.question/3.dropdown.md
@@ -1,8 +1,8 @@
 ---
-title: "Liste déroulante"
-description: "Guide pour intégrer une question Liste déroulante à votre parcours de formation."
+title: "Dropdown List"
+description: "Guide to integrate a dropdown list question into your training path."
 icon: "lucide:list-collapse"
 ---
-Question dans laquelle l'utilisateur doit sélectionner une réponse dans une liste déroulante. Cette question peut être utilisée pour tester la capacité de l'utilisateur à identifier une réponse appropriée à partir d'une liste de choix.
+Question where the user must select an answer from a dropdown list. This question can be used to test the user's ability to identify an appropriate answer from a list of choices.
 
-![Renseigner une liste déroulante](/images/questions/dropdown.png)
+![Fill in a dropdown list question](/images/questions/dropdown.png)
