--- a/content/en/guide/2.user/6.question/4.reorder.md
+++ b/content/en/guide/2.user/6.question/4.reorder.md
@@ -1,9 +1,9 @@
 ---
 title: "Reorder"
-description: "Guide pour intégrer une question Reorder à votre parcours de formation."
+description: "Guide to integrate a reorder question into your training path."
 icon: "lucide:list-ordered"
 ---
 
-Question dans laquelle l'utilisateur doit réorganiser une liste d'éléments dans l'ordre correct ou logique. Cette question peut être utilisée pour tester la capacité de l'utilisateur à organiser ou à hiérarchiser des éléments en fonction de leurs caractéristiques.
+Question where the user must reorganize a list of elements in the correct or logical order. This question can be used to test the user's ability to organize or prioritize elements based on their characteristics.
 
-![Renseigner un Reorder](/images/questions/reorder.png)
+![Fill in a reorder question](/images/questions/reorder.png)
