--- a/content/en/guide/2.user/6.question/5.swipe.md
+++ b/content/en/guide/2.user/6.question/5.swipe.md
@@ -1,8 +1,8 @@
 ---
 title: "Swipe"
-description: "Guide pour intégrer une question Swipe à votre parcours de formation."
+description: "Guide to integrate a swipe question into your training path."
 icon: "lucide:gallery-horizontal-end"
 ---
-Question dans laquelle l'utilisateur doit faire glisser un élément à gauche ou à droite pour y répondre. Cette question peut être utilisée pour tester la rapidité ou la réactivité de l'utilisateur dans la prise de décision ou la résolution de problèmes.
+Question where the user must swipe an element left or right to answer. This question can be used to test the user's speed or responsiveness in decision-making or problem-solving.
 
-![Renseigner un Swipe](/images/questions/swipe.png)
+![Fill in a swipe question](/images/questions/swipe.png)
