--- a/content/en/guide/2.user/7.scenario.md
+++ b/content/en/guide/2.user/7.scenario.md
@@ -1,34 +1,34 @@
 ---
-title: Former votre scénario
-description: "Guide pour concevoir un scénario dans l'éditeur ePoc."
+title: Build Your Scenario
+description: "Guide to design a scenario in the ePoc editor."
 icon: "lucide:book-open-text"
 ---
 
-La particularité de cet éditeur est que l’interface graphique proposée se veut très visuelle. L'ePoc est composé de chapitres qui sont eux-mêmes composés de pages qui contiennent différents types de contenus (vidéo, textes, quiz, etc).
+The particularity of this editor is that the proposed graphical interface is very visual. The ePoc is composed of chapters which are themselves composed of pages containing different types of content (video, text, quizzes, etc).
 
-![Exemple de scenario](./images/scenario.png)
+![Example scenario](./images/scenario.png)
 
-## Relier les pages
+## Link Pages
 
-Les chapitres disposent d’un point rouge et les pages, de deux points rouges de chaque côté. Ces points rouges permettent de connecter les pages entre elles et à un chapitre, selon le parcours pédagogique pour les intégrer à la formation sur mobile.
+Chapters have a red dot and pages have two red dots on each side. These red dots allow you to connect pages to each other and to a chapter, according to the educational path to integrate them into the mobile training.
 
 ::alert{type="warning" icon="lucide:alert-triangle"}
-**Attention** : Il est en impossible de prévisualiser des contenus non-connectés
+**Warning**: It is impossible to preview unconnected content
 ::
 
-Pour relier deux pages existants, placer votre curseur de souris sur le point rouge à côté du premier contenu et maintenez le bouton de la souris enfoncé. Faites glisser votre souris jusqu’à l’autre point rouge du deuxième contenu et relâchez le bouton de la souris. Une flèche noire reliant les deux contenus apparaîtra.
+To link two existing pages, place your mouse cursor on the red dot next to the first content and hold down the mouse button. Drag your mouse to the other red dot of the second content and release the mouse button. A black arrow connecting the two contents will appear.
 
-![Faire un lien](./images/link.png)
+![Create a link](./images/link.png)
 
-N'hésitez pas à explorer les fonctionnalités de cet outil pour créer des formations interactives et engageantes !
+Feel free to explore the features of this tool to create interactive and engaging training!
 
-## Action sur la zone d'édition
+## Actions in the Editing Area
 
-- **Ajouter un élément** : Glisser déposer un élément depuis la barre d'outils latérale.
-- **Supprimer un élément** :
-    - Sélectionner un contenu ou une page et cliquer sur le bouton pour le supprimer.
-    - Utiliser la touche “effacer” de votre clavier.
-- **Déplacer un élément** : cliquer en restant enfoncé et déplacer la souris pour le déplacer, puis relâcher.
-- **Selection multiple** :
-    - Maintenir la touche “majuscule” de votre clavier pour créer un rectangle de sélection de plusieurs éléments
-    - Maintenir la touche "ctrl/cmd" de votre clavier puis cliquer sur les élements que vous souhaitez sélectionner
+- **Add an element**: Drag and drop an element from the side toolbar.
+- **Delete an element**:
+    - Select a content or page and click the button to delete it.
+    - Use the "delete" key on your keyboard.
+- **Move an element**: Click and hold to move the mouse to reposition it, then release.
+- **Multiple selection**:
+    - Hold the "shift" key on your keyboard to create a selection rectangle for multiple elements
+    - Hold the "ctrl/cmd" key on your keyboard then click on the elements you want to select
