--- a/content/en/guide/2.user/8.export-and-publish/1.index.md
+++ b/content/en/guide/2.user/8.export-and-publish/1.index.md
@@ -1,36 +1,35 @@
 ---
-title: Publier et partager
-description: "Guide pour publier et partager votre ePoc."
+title: "Publish and Share"
+description: "Guide to publish and share your ePoc."
 icon: "lucide:share"
 ---
 
-## Publier votre ePoc
+## Publish Your ePoc
 
-Une fois votre ePoc terminé, vous pouvez le publier sous forme d'archive lisible par notre application mobile.
+Once your ePoc is complete, you can publish it as an archive readable by our mobile application.
 
-Pour cela rien de plus simple :
+It's very simple:
 
 ::steps{level=5}
-##### Cliquer sur le bouton d'export en haut à droite
-##### Choisissez un emplacement et un nom de fichier
+##### Click on the export button in the top right
+##### Choose a location and filename
 ::
-<!-- 1. Cliquer sur le bouton d'export en haut à droite
-2. Choisisez un emplacement et un nom de fichier -->
+<!-- 1. Click on the export button in the top right
+2. Choose a location and filename -->
 
 ![Export ePoc](/images/export-epoc.gif)
 
 
-## Partager votre ePoc
+## Share Your ePoc
 
-Afin de pouvoir consulter votre nouvel ePoc dans l'application mobile, vous devez l'héberger sur un service accessible
-depuis internet (Nuage, Nextcloud, Google Drive, Dropbox, Github, etc).
+To be able to view your new ePoc in the mobile application, you need to host it on a service accessible from the internet (Cloud, Nextcloud, Google Drive, Dropbox, Github, etc).
 
-Une fois celui-ci déposer vous pouvez générer un QR Code avec [notre outil](/en/tools/qr-code-generator) en ligne pour l'importer depuis votre application mobile.
+Once it's uploaded, you can generate a QR Code with [our online tool](/en/tools/qr-code-generator) to import it from your mobile application.
 
 ::card-group
     ::card
     ---
-    title: Déposer sur Nuage
+    title: Upload to Cloud
     horizontal: true
     icon: lucide:cloud
     to: /en/guide/user/export-and-publish/nuage
@@ -39,7 +38,7 @@ Une fois celui-ci déposer vous pouvez générer un QR Code avec [notre outil](/
 
     ::card
     ---
-    title: Déposer sur Google Drive
+    title: Upload to Google Drive
     horizontal: true
     icon: lucide:hard-drive-download
     to: /guide/user/export-and-publish/google-drive
@@ -48,7 +47,7 @@ Une fois celui-ci déposer vous pouvez générer un QR Code avec [notre outil](/
 
     ::card
     ---
-    title: Déposer sur Github
+    title: Upload to Github
     horizontal: true
     icon: lucide:github
     to: /guide/user/export-and-publish/github
@@ -57,7 +56,7 @@ Une fois celui-ci déposer vous pouvez générer un QR Code avec [notre outil](/
 
     ::card
     ---
-    title: Déposer sur Dropbox
+    title: Upload to Dropbox
     horizontal: true
     icon: lucide:package-open
     to: /guide/user/export-and-publish/dropbox
@@ -66,7 +65,7 @@ Une fois celui-ci déposer vous pouvez générer un QR Code avec [notre outil](/
 
     ::card
     ---
-    title: Déposer sur FliQR
+    title: Upload to FliQR
     horizontal: true
     icon: lucide:scan-qr-code
     to: /guide/user/export-and-publish/fliqr
