--- a/content/en/guide/2.user/8.export-and-publish/2.nuage.md
+++ b/content/en/guide/2.user/8.export-and-publish/2.nuage.md
@@ -1,21 +1,20 @@
 ---
-title: Nextcloud/Nuage
+title: "Nextcloud/Cloud"
 icon: lucide:cloud
 ---
-Nuage est le cloud (propulsé par Nextcloud) et proposé à tous les agents de l'éducation nationnale mais vous pouvez aussi une liste de
-fournisseur basé sur Nextcloud [ici](https://www.chatons.org/search/by-service?service_type_target_id=All&field_alternatives_aux_services_target_id=554&field_software_target_id=All&field_is_shared_value=All&title=).
+Cloud is the cloud (powered by Nextcloud) offered to all national education agents, but you can also find a list of Nextcloud-based providers [here](https://www.chatons.org/search/by-service?service_type_target_id=All&field_alternatives_aux_services_target_id=554&field_software_target_id=All&field_is_shared_value=All&title=).
 
 ::steps
-### Déposer votre ePoc dans votre espace
-### Récuperer le lien de partage et ajouter `/download` à la fin
-Exemple : `https://demo1.nextcloud.com/s/5Xs6DX9HWKKrNpW`
+### Upload your ePoc to your space
+### Get the share link and add `/download` at the end
+Example: `https://demo1.nextcloud.com/s/5Xs6DX9HWKKrNpW`
 
-Devient : `https://demo1.nextcloud.com/s/5Xs6DX9HWKKrNpW/download`
+Becomes: `https://demo1.nextcloud.com/s/5Xs6DX9HWKKrNpW/download`
 
 ![Copy share link Nextcloud](images/share-nextcloud.png)
-### Utiliser [notre outil](/en/tools/qr-code-generator) pour convertir ce lien en QR Code
+### Use [our tool](/en/tools/qr-code-generator) to convert this link into a QR Code
 ::alert{icon="lucide:link" to="https://epoc.inria.fr/qr-code-generator/"}
-Notre outil de génération de QR Code
+Our QR Code generator tool
 ::
 ![Get QR Code Nextcloud](images/share-qr-nextcloud.png)
 ::
