--- a/content/en/guide/2.user/8.export-and-publish/3.google-drive.md
+++ b/content/en/guide/2.user/8.export-and-publish/3.google-drive.md
@@ -1,15 +1,15 @@
 ---
-title: Google Drive
+title: "Google Drive"
 icon: lucide:hard-drive-download
 ---
 
 ::steps
-### Déposer votre ePoc dans votre espace (100MB max sinon Google Drive affiche un avertissement qui bloque le téléchargement direct)
-### Récupérer le lien de partage
+### Upload your ePoc to your space (100MB max otherwise Google Drive will display a warning that blocks direct download)
+### Get the share link
 ![Copy share link Google Drive](images/share-googledrive.png)
-### Utiliser [notre outil](/en/tools/qr-code-generator) pour convertir ce lien en QR Code
+### Use [our tool](/en/tools/qr-code-generator) to convert this link into a QR Code
 ::alert{icon="lucide:link" to="https://epoc.inria.fr/qr-code-generator/"}
-Notre outil de génération de QR Code
+Our QR Code generator tool
 ::
 ![Get QR Code Google Drive](images/share-qr-googledrive.png)
 ::
