--- a/content/en/guide/2.user/8.export-and-publish/4.github.md
+++ b/content/en/guide/2.user/8.export-and-publish/4.github.md
@@ -1,15 +1,15 @@
 ---
-title: Github
+title: "Github"
 icon: lucide:github
 ---
 
 ::steps
-### Déposer votre ePoc dans votre dépôt (25MB max, le dépôt doit être *public*)
-### Copier le lien vers le fichier
+### Upload your ePoc to your repository (25MB max, the repository must be *public*)
+### Copy the link to the file
 ![Copy share link Github](images/share-github.png)
-### Utiliser [notre outil](/en/tools/qr-code-generator) pour convertir ce lien en QR Code
+### Use [our tool](/en/tools/qr-code-generator) to convert this link into a QR Code
 ::alert{icon="lucide:link" to="https://epoc.inria.fr/qr-code-generator/"}
-Notre outil de génération de QR Code
+Our QR Code generator tool
 ::
 ![Get QR Code Github](images/share-qr-github.png)
 ::
