--- a/content/en/guide/2.user/8.export-and-publish/5.dropbox.md
+++ b/content/en/guide/2.user/8.export-and-publish/5.dropbox.md
@@ -1,14 +1,14 @@
 ---
-title:  Dropbox
+title: "Dropbox"
 icon: lucide:package-open
 ---
 
 ::steps
-### Déposer votre ePoc dans votre espace
-### Récupérer le lien de partage
-### Utiliser [notre outil](/en/tools/qr-code-generator) pour convertir ce lien en QR Code
+### Upload your ePoc to your space
+### Get the share link
+### Use [our tool](/en/tools/qr-code-generator) to convert this link into a QR Code
 ::alert{icon="lucide:link" to="https://epoc.inria.fr/qr-code-generator/"}
-Notre outil de génération de QR Code
+Our QR Code generator tool
 ::
 ![Get QR Code Nextcloud](images/share-qr-nextcloud.png)
 ::
