--- a/content/en/guide/2.user/8.export-and-publish/6.fliqr.md
+++ b/content/en/guide/2.user/8.export-and-publish/6.fliqr.md
@@ -1,16 +1,16 @@
 ---
-title: FliQR
+title: "FliQR"
 icon: lucide:scan-qr-code
 ---
 
-Pour un partage rapide (QR code valable que quelques jours) vous pouvez déposer votre ePoc sur [FliQR](https://fliqr.codes). Ce service propose une version gratuite idéale pour partager un ePoc en cours de conception.
+For quick sharing (QR code valid for only a few days) you can upload your ePoc to [FliQR](https://fliqr.codes). This service offers a free version ideal for sharing an ePoc during development.
 
 ::steps
-### Déposer votre ePoc sur le site [FliQR.codes](https://fliqr.codes)
+### Upload your ePoc to the [FliQR.codes](https://fliqr.codes) website
 ::alert{icon="lucide:link" to="https://epoc.inria.fr/qr-code-generator/"}
-Site FliQR
+FliQR website
 ::
-### Récupérer le QR Code
+### Get the QR Code
 ::
 
-![Upload sur FliQR](images/fliqr.gif)
+![Upload to FliQR](images/fliqr.gif)
