--- a/content/en/guide/3.developer/1.contributing.md
+++ b/content/en/guide/3.developer/1.contributing.md
@@ -1,44 +1,44 @@
 ---
-title: "Contribuer"
-description: "Guide pour contribuer au code source d'ePoc"
+title: "Contributing"
+description: "Guide to contribute to ePoc's source code"
 icon: "lucide:code"
 ---
 
-Bienvenue dans la communauté ePoc, une initiative open source dédiée à la création d'une solution d'apprentissage mobile libre et ouverte, ainsi qu'à l'élaboration d'un format d'édition adapté pour une éducation accessible et interactive sur les appareils mobiles. Nous sommes convaincus que l'éducation doit être accessible à tous, et notre projet vise à faciliter l'apprentissage via les téléphones portables, en particulier dans les régions où l'accès à l'éducation traditionnelle est limité.
+Welcome to the ePoc community, an open-source initiative dedicated to creating a free and open mobile learning solution, as well as developing an editing format suitable for accessible and interactive education on mobile devices. We believe that education should be accessible to everyone, and our project aims to facilitate learning through mobile phones, particularly in regions where access to traditional education is limited.
 
-## Pourquoi contribuer ?
+## Why Contribute?
 
-1. **Faire la différence** : En contribuant à ePoc, vous participez à un projet qui vise à démocratiser l'accès à l'éducation et à promouvoir l'apprentissage mobile. Votre contribution aura un impact direct sur la vie des personnes qui bénéficieront de ces outils d'apprentissage innovants.
+1. **Make a Difference**: By contributing to ePoc, you participate in a project that aims to democratize access to education and promote mobile learning. Your contribution will have a direct impact on the lives of people who will benefit from these innovative learning tools.
 
-2. **Développer vos compétences** : Travailler sur un projet open source comme ePoc vous permettra d'améliorer vos compétences techniques et de collaborer avec d'autres développeurs, concepteurs et éducateurs passionnés. C'est une excellente occasion d'apprendre et de grandir en tant que professionnel.
+2. **Develop Your Skills**: Working on an open-source project like ePoc will allow you to improve your technical skills and collaborate with other passionate developers, designers, and educators. It's an excellent opportunity to learn and grow as a professional.
 
-3. **Faire partie d'une communauté** : En rejoignant ePoc, vous intégrez une communauté dynamique et engagée, qui partage les mêmes valeurs et objectifs. Vous aurez l'opportunité de rencontrer et d'échanger avec des personnes du monde entier, et de créer des liens durables.
+3. **Be Part of a Community**: By joining ePoc, you become part of a dynamic and committed community that shares the same values and goals. You'll have the opportunity to meet and exchange with people from around the world and build lasting connections.
 
-## Comment contribuer ?
+## How to Contribute?
 
-Il existe de nombreuses façons de contribuer à ePoc, en fonction de vos compétences et de vos centres d'intérêt. Voici quelques idées :
+There are many ways to contribute to ePoc, depending on your skills and interests. Here are some ideas:
 
-1. **Développement de la solution d'apprentissage mobile** : Si vous êtes développeur, vous pouvez participer à l'amélioration de la solution ePoc en proposant de nouvelles fonctionnalités, en corrigeant des bugs ou en optimisant le code source.
+1. **Development of the Mobile Learning Solution**: If you're a developer, you can participate in improving the ePoc solution by proposing new features, fixing bugs, or optimizing the source code.
 
-2. **Création de contenu** : Si vous êtes éducateur ou expert dans un domaine particulier, vous pouvez créer du contenu éducatif adapté au format ePoc et le partager avec la communauté.
+2. **Content Creation**: If you're an educator or expert in a particular field, you can create educational content adapted to the ePoc format and share it with the community.
 
-3. **Conception et design** : Si vous êtes designer, vous pouvez contribuer à l'amélioration de l'interface utilisateur de la solution ePoc et à la création de ressources visuelles pour les cours et les activités d'apprentissage.
+3. **Design**: If you're a designer, you can contribute to improving the user interface of the ePoc solution and creating visual resources for courses and learning activities.
 
-4. **Développement de plugins** : Si vous avez des compétences en développement, vous pouvez créer des plugins pour étendre les fonctionnalités de la solution ePoc et les partager avec la communauté.
+4. **Plugin Development**: If you have development skills, you can create plugins to extend the functionality of the ePoc solution and share them with the community.
 
-5. **Traduction** : Si vous maîtrisez plusieurs langues, vous pouvez aider à traduire la solution et le contenu éducatif dans différentes langues, afin de toucher un public plus large.
+5. **Translation**: If you're proficient in multiple languages, you can help translate the solution and educational content into different languages to reach a wider audience.
 
-6. **Promotion et communication** : Si vous êtes à l'aise avec les réseaux sociaux et la communication, vous pouvez aider à promouvoir le projet ePoc et à sensibiliser le public à l'importance de l'éducation mobile.
+6. **Promotion and Communication**: If you're comfortable with social media and communication, you can help promote the ePoc project and raise awareness about the importance of mobile education.
 
-## Rejoignez-nous dès aujourd'hui !
+## Join Us Today!
 
-N'hésitez plus et rejoignez la communauté ePoc pour contribuer à un projet open source qui a un réel impact sur l'éducation et l'apprentissage mobile dans le monde. Ensemble, nous pouvons faire la différence et offrir à chacun la possibilité d'apprendre et de progresser, quel que soit son lieu de vie ou ses moyens.
+Don't hesitate any longer and join the ePoc community to contribute to an open-source project that has a real impact on education and mobile learning worldwide. Together, we can make a difference and offer everyone the opportunity to learn and progress, regardless of where they live or their means.
 
-Pour en savoir plus sur les différentes façons de contribuer à ePoc et pour rejoindre notre communauté, rendez-vous sur notre site web et consultez notre guide du contributeur. Nous avons hâte de vous accueillir parmi nous !
+To learn more about the different ways to contribute to ePoc and to join our community, visit our website and check out our contributor guide. We look forward to welcoming you!
 
-## Liens utiles
+## Useful Links
 
 - [Sources](https://github.com/ePoc-app)
 - [Tchap](https://www.tchap.gouv.fr/#/room/#epoc:agent.education.tchap.gouv.fr)
 - [Discord](https://discord.gg/xzSVeuPEtH)
-- [Documentation des plugins](plugins.md)
+- [Plugin Documentation](plugins.md)
