--- a/content/en/guide/3.developer/2.file-format.md
+++ b/content/en/guide/3.developer/2.file-format.md
@@ -1,71 +1,62 @@
 ---
-title: "Format de fichier"
-description: "Guide des formats de fichiers utilisés un ePoc"
+title: "File Format"
+description: "Guide to the file formats used in an ePoc"
 icon: "lucide:files"
 ---
 
-## Fichier `.epocproject`
+## `.epocproject` File
 
-Le format de fichier ePoc est une archive ZIP contenenant les assets, les données et
-metadonnées mais aussi les données de conception de l'ePoc au format JSON.
+The ePoc file format is a ZIP archive containing assets, data, metadata, and also the ePoc design data in JSON format.
 
-Ce format de fichier a été introduit par l'éditeur.
+This file format was introduced by the editor.
 
-Pour extraire le contenu d'un fichier `.epocproject`, il suffit d'utiliser la commande `unzip`.
-
-```bash
-unzip mon_ePoc.epocproject
-```
-
-Pour archiver le contenu dans un `.epocproject`, il suffit de se placer dans le dossier contenant
-`content.json` et `project.json` puis d'utiliser la commande `zip`
+To extract the contents of a `.epocproject` file, simply use the `unzip` command.
 
 ```bash
-zip -r -X mon_ePoc.epocproject *
+unzip my_ePoc.epocproject
 ```
-## Contenus de l'archive
 
-### `content.json` (`.epoc`, `.epocproject` et `.zip`)
+To archive the contents into a `.epocproject`, simply navigate to the folder containing `content.json` and `project.json` and use the `zip` command.
 
-Contient les données (chapitres, pages, contenus, quizz) et métadonnées (titre, auteurs, etc)
-de l'ePoc au format JSON dans un schéma respectant les specifications du format ePoc définis
-en TypeScript.
-:read-more{to="data-types" title="Format de données"}
+```bash
+zip -r -X my_ePoc.epocproject *
+```
 
-### `project.json` (`.epocproject` seulement)
+## Archive Contents
 
-Ce fichier contient les données de scénarisation, des contenus (cahpitres, pages, contenus, quizz) et
-métadonnées (titre, auteurs, etc) de l'ePoc au format JSON. Il s'agit d'une serialization des données
-du diagramme (voir [`vue-flow`](https://vueflow.dev/)).
+### `content.json` (`.epoc`, `.epocproject` and `.zip`)
+
+Contains the data (chapters, pages, contents, quizzes) and metadata (title, authors, etc.) of the ePoc in JSON format following the specifications of the ePoc format defined in TypeScript.
+:read-more{to="data-types" title="Data Format"}
+
+### `project.json` (`.epocproject` only)
+
+This file contains the scenario data, contents (chapters, pages, contents, quizzes) and metadata (title, authors, etc.) of the ePoc in JSON format. It is a serialization of the diagram data (see [`vue-flow`](https://vueflow.dev/)).
 
 ### `assets` *(folder)*
 
-Contient tous les assets (images, viéos, etc) de l'ePoc.
+Contains all the assets (images, videos, etc.) of the ePoc.
 
 ### `plugins` *(folder)*
 
-### Autres
+### Others
 
-D'autres fichiers ou dossiers présents dans l'archive peuvent être utilisés mais ne sont pas
-supportés par défaut par l'éditeur.
+Other files or folders present in the archive may be used but are not supported by default by the editor.
 
-## Fichier de publication (export) `.epoc` ou `.zip`
+## Publication (export) File `.epoc` or `.zip`
 
-Le format de fichier d'export pour publication sur l'application mobile est aussi une
-archive ZIP contenant les assets, les données et metadonnées de l'ePoc au format JSON.
+The export file format for publication on the mobile application is also a ZIP archive containing the assets, data, and metadata of the ePoc in JSON format.
 
-Il s'agit d'un sous-ensemble du fichier `.epoc`optimisé pour sa diffusion. Tous els assets
-et pages non reliés à un chapitre sont retirés de l'archive.
+It is a subset of the `.epoc` file optimized for distribution. All assets and pages not linked to a chapter are removed from the archive.
 
-Pour extraire le contenu d'un fichier `.epoc` ou `.zip`, il suffit d'utiliser la commande `unzip`.
+To extract the contents of a `.epoc` or `.zip` file, simply use the `unzip` command.
 
 ```bash
-unzip mon_ePoc.epoc # ou unzip mon_ePoc.zip
+unzip my_ePoc.epoc # or unzip my_ePoc.zip
 ```
 
-Pour archiver le contenu dans un `.epoc`, il suffit de se placer dans le dossier contenant
-`content.json` puis d'utiliser la commande `zip`
+To archive the contents into a `.epoc`, simply navigate to the folder containing `content.json` and use the `zip` command.
 
 ```bash
-zip -r -X mon_ePoc.epoc *
+zip -r -X my_ePoc.epoc *
 ```
