--- a/content/en/guide/3.developer/3.data-types.md
+++ b/content/en/guide/3.developer/3.data-types.md
@@ -1,20 +1,18 @@
 ---
-title: "Format de données"
-description: "Guide des formats de données utilisés par ePoc"
+title: "Data Format"
+description: "Guide to the data formats used by ePoc"
 icon: "lucide:database"
 ---
 
-Le format des données du fichier `content.json` est un schéma JSON définit à l'aide de classes, types et interfaces
-TypeScript.
+The data format of the `content.json` file is a JSON schema defined using TypeScript classes, types, and interfaces.
 
-Pour en apprendre plus sur le format de données, nous vous invitons à utiliser les classes ePocs (v1) téléchargeble
-depuis [npm](https://www.npmjs.com/package/@epoc/epoc-types).
+To learn more about the data format, we invite you to use the ePoc classes (v1) available for download from [npm](https://www.npmjs.com/package/@epoc/epoc-types).
 
 ```bash
 npm i @epoc/epoc-types
 ```
 
-## Liens utiles
+## Useful Links
 
 - [Types](https://github.com/ePoc-app/epoc-types/tree/master/src/v1)
 - [Package](https://www.npmjs.com/package/@epoc/epoc-types)
