--- a/content/en/guide/2.user/5.content/2.wysiwyg/2.mermaid.md
+++ b/content/en/guide/2.user/5.content/2.wysiwyg/2.mermaid.md
@@ -1,8 +1,8 @@
 ---
 title: "Mermaid"
-description: "Guide pour intégrer du contenu Mermaid à votre parcours de formation."
+description: "Guide to integrate Mermaid content into your training path."
 icon: "lucide:chart-area"
 ---
-Dans l'éditeur WYSIWYG, vous pouvez rédiger du code mermaid.
+In the WYSIWYG editor, you can write Mermaid code.
 
-## 🚧 En construction
+## 🚧 Under Construction
