--- a/content/en/guide/2.user/6.question/0.index.md
+++ b/content/en/guide/2.user/6.question/0.index.md
@@ -1,26 +1,22 @@
 ---
 title: "Evaluation"
-description: "Guide pour intégrer une évaluation à votre parcours de formation."
+description: "Guide to integrate an evaluation into your training path."
 icon: "lucide:file-badge"
 ---
 
-Pour intégrer une évaluation à votre parcours de formation, il faut cliquer sur le bouton question de la barre
-d'outils latérale et choisir un type de question puis effectuer un glisser-déposer en partant de la barre
-d'outils latérale et le déposer dans la zone d'édition.
+To integrate an evaluation into your training path, you need to click on the question button in the side toolbar, choose a question type, and then drag and drop from the side toolbar to the editing area.
 
-![Renseigner un quizz](/images/questions/question.png)
+![Fill in a quiz](/images/questions/question.png)
 
-L'évaluation peut se faire de deux façons :
+The evaluation can be done in two ways:
 
-- Question simple : une question unique posée dans le déroulement normal du chapitre sans changer de contexte.
-- Activité à questions multiples : l'activité se lance dans un nouveau contexte et l'apprenant doit répondre à toute
-  une série de questions avant d'obtenir son score ou son badge.
+- Simple question: a single question asked in the normal flow of the chapter without changing context.
+- Multiple question activity: the activity launches in a new context and the learner must answer a whole series of questions before getting their score or badge.
 
+There are currently five types of questions:
 
-Il existe actuellement cinq types de questions :
-
-- [QCU/QCM](./question/choice.md)
-- [Glisser-déposer](./question/drag-and-drop.md)
+- [Single/Multiple Choice](./question/choice.md)
+- [Drag and Drop](./question/drag-and-drop.md)
 - [Reorder](./question/reorder.md)
 - [Swipe](./question/swipe.md)
-- [Liste déroulante](./question/dropdown.md)
+- [Dropdown List](./question/dropdown.md)
